Refactors and add data capture